--- a/django_google_cse/templates/django_google_cse/default.html
+++ b/django_google_cse/templates/django_google_cse/default.html
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="span5">
             <div class="encabezado-title">
-            RESULTADOS DE BUSQUEDA
+            RESULTADOS DE BÚSQUEDA
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="span12">
                 
 
- <div class="alert">Resultados de Búsqueda para: <b>{{q}}</b></div><br>
+ <div class="alert">Resultados de búsqueda para: <b>{{q}}</b></div><br>
         <div id="cse">Loading</div>   
     
     <style type="text/css">
