--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -40,14 +40,14 @@
         <div class="navbar-inner">
             <div class="container">
               <a class="brand" href="/">
-                <i class="icon-home icon-white opacidad-50"></i>Plataforma de comunicacion y aprendizaje
+                <i class="icon-home icon-white opacidad-50"></i>Plataforma de comunicación y aprendizaje
               </a>
               <ul class="nav pull-right">
                   <li class="divider-vertical"></li>
                   {% if user.username %}
                     <li ><a href="/foros/perfil"><i class="icon-user icon-white opacidad-50"></i>Bienvenido {{ user.username }}</a></li>
                     <li class="divider-vertical"></li>
-                    <li ><a href="/contrapartes/estadisticas/ver"><i class="icon-signal opacidad-50 icon-white"></i>Estadisticas</a></li>
+                    <li ><a href="/contrapartes/estadisticas/ver"><i class="icon-signal opacidad-50 icon-white"></i>Estadísticas</a></li>
                     <li class="divider-vertical"></li>
                     <li><a href="/accounts/logout" title="Salir de Administración"><i class="icon-off opacidad-50 icon-white"></i>Salir</a></li>
                   {% else %}
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="span12 footerinterior">
                 <div class="footertext1">Programa Medios de Vida Sostenible</div>
-                <div class="footertext2">CAFOD is the official Catholic aid agency for England and Wales</div>
+                <div class="footertext2">CAFOD is the official Catholic Aid Agency for England and Wales</div>
                 <div class="footertext2">Desarrollado por <a href="http://www.simas.org.ni/">SIMAS</a></div>
               </div>
             </div>
