--- a/templates/contrapartes/contraparte_detail.html
+++ b/templates/contrapartes/contraparte_detail.html
@@ -54,13 +54,13 @@
                     <tbody>
                         {%if contra.pais %}
                         <tr>
-                            <td><b>Pais</b></td>
+                            <td><b>País</b></td>
                             <td><img style="margin-top:-3px" src="/files/img/{{contra.pais.codigo}}.png"> {{contra.pais}}</td>
                         </tr>
                         {%endif%}
                         {%if contra.fundacion%}
                         <tr>
-                            <td><b>Año de Fundación</b></td>
+                            <td><b>Año de fundación</b></td>
                             <td>{{contra.fundacion}}</td>
                         </tr>
                         {%endif%}
@@ -72,13 +72,13 @@
                         {%endif%}
                         {%if contra.telefono%}
                         <tr>
-                            <td><b>Telefono</b></td>
+                            <td><b>Teléfono</b></td>
                             <td>{{contra.telefono}}</td>
                         </tr>
                         {%endif%}
                         {%if contra.sitio_web%}
                         <tr>
-                            <td><b>Sitio Web</b></td>
+                            <td><b>Sitio web</b></td>
                             <td><a href="{{contra.sitio_web}}">{{contra.sitio_web}}</a></td>
                         </tr>
                         {%endif%}
