--- a/templates/contrapartes/crear_contraparte.html
+++ b/templates/contrapartes/crear_contraparte.html
@@ -111,7 +111,7 @@
 			</div>
 			<div class="span3">
 				<div class="alert "><i class="icon-info-sign"></i>
-				  Esta es la informacion general de la contraparte que se presenta en la parte publica
+				  Esta es la información general de la contraparte que se presenta en la parte pública
 				</div>
 				<div class="well" id="actionbuttons">
 				<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
