--- a/templates/contrapartes/editar_usuario.html
+++ b/templates/contrapartes/editar_usuario.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="span3">
 				<div class="alert "><i class="icon-info-sign"></i>
-				  Editar informacion general del usuario
+				  Editar información general del usuario
 				</div>
 				<div class="well" id="actionbuttons">
 				<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
