--- a/templates/foros/crear_foro.html
+++ b/templates/foros/crear_foro.html
@@ -72,7 +72,7 @@
                                           {{form.as_p}}
                                         <div class="tabbable tabs-left">
                                                 <ul class="nav nav-tabs nav-tab-media">
-                                                  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imagenes</a></li>
+                                                  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imágenes</a></li>
                                                   <li><a href="#documentos" data-toggle="tab"><i class="icon-file"></i>Documentos</a></li>
                                                   <li><a href="#videos" data-toggle="tab"><i class="icon-film"></i>Videos</a></li>
                                                   <li><a href="#audios" data-toggle="tab"><i class="icon-volume-up"></i>Audios</a></li>
@@ -129,7 +129,7 @@
                         </div>
                         <div class="span3">
                                 <div class="alert "><i class="icon-info-sign"></i>
-                                  Formulario para la creacion de foros
+                                  Formulario para la creación de foros
                                 </div>
                                 <div class="well" id="actionbuttons">
                                 <input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
