--- a/templates/foros/foro_list.html
+++ b/templates/foros/foro_list.html
@@ -42,7 +42,7 @@
 					<thead>
 		        	<tr>
 		        		<th>
-		        			Recepcion de aportes <img src="/files/img/group.png">
+		        			Recepción de aportes <img src="/files/img/group.png">
 		        		</th>
 		        		<th>
 		        			Cierre de aportes <img src="/files/img/group_delete.png">
