--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -71,7 +71,7 @@
 					<hr>
 					<div class="tabbable tabs-left">
 						<ul class="nav nav-tabs nav-tab-media">
-						  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imagenes</a></li>
+						  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imágenes</a></li>
 						  <li><a href="#documentos" data-toggle="tab"><i class="icon-file"></i>Documentos</a></li>
 						</ul>
 						<div class="tab-content tab-media">
@@ -84,7 +84,7 @@
 							<hr>
 						  </div>
 						  <div class="tab-pane" id="documentos">
-						  	<span class="label label-warning">DODCUMENTOS</span><hr>
+						  	<span class="label label-warning">DOCUMENTOS</span><hr>
 							{% for docu in form3 %}
 								{{docu.label_tag}}
 								{{docu}}
@@ -98,7 +98,7 @@
 			</div>
 			<div class="span3">
 				<div class="alert "><i class="icon-info-sign"></i>
-				  Crear una nota para presentar al publico un contenido destacado de tu organizacion
+				  Crear una nota para presentar al público un contenido destacado de tu organización
 				</div>
 				<div class="well" id="actionbuttons">
 				<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
