--- a/templates/notas/editar_nota.html
+++ b/templates/notas/editar_nota.html
@@ -76,7 +76,7 @@
 					<hr>
 					<div class="tabbable tabs-left">
 						<ul class="nav nav-tabs nav-tab-media">
-						  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imagenes</a></li>
+						  <li class="active"><a href="#fotos" data-toggle="tab"><i class="icon-camera"></i>Fotos e imágenes</a></li>
 						  <li><a href="#documentos" data-toggle="tab"><i class="icon-file"></i>Documentos</a></li>
 						</ul>
 						<div class="tab-content tab-media">
@@ -107,7 +107,7 @@
 			</div>
 			<div class="span3">
 				<div class="alert "><i class="icon-info-sign"></i>
-				  Crear una nota para presentar al publico un contenido destacado de tu organizacion
+				  Crear una nota para presentar al público un contenido destacado de tu organización
 				</div>
 				<div class="well" id="actionbuttons">
 				<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
