--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -131,7 +131,7 @@ $(".alert").alert();
             {% for comentario in nota.comentarionotas_set.all %}         
             <div class="well" id="cmt{{comentario.id}}">{{comentario.comentario|safe}}
               <div class="user-info">
-                <i>escrito por</i>
+                <i>Escrito por:</i>
                 {%if comentario.user.userprofile.avatar %}
                 <img src="{{comentario.user.userprofile.avatar.url_70x60}}" width="25" height="25">
                 {%else%}
