--- a/templates/privados/agenda.html
+++ b/templates/privados/agenda.html
@@ -46,7 +46,7 @@
 						<a href="{{nota.get_absolute_url}}" class="titulo-medio">{{nota.evento}}</a><br>
 						{{nota.descripcion|safe|truncatewords_html:50}}</a><br>
 						<br>
-						<a href="{{nota.get_absolute_url}}" class="btn btn-success btn-mini">Leer mas</a>
+						<a href="{{nota.get_absolute_url}}" class="btn btn-success btn-mini">Leer más</a>
 				</div>
 			</div>
 			<hr>
