--- a/templates/privados/documentos.html
+++ b/templates/privados/documentos.html
@@ -43,7 +43,7 @@
 					<thead>
 						<tr>
 							<th width="610">Nombre del documento</th>
-							<th>descargar</th>
+							<th>Descargar</th>
 						</tr>
 					</thead>
 					<tbody>
