--- a/templates/privados/estadisticas.html
+++ b/templates/privados/estadisticas.html
@@ -21,7 +21,7 @@ $(function(){
         <div class="row">
           <div class="span5">
             <div class="encabezado-title">
-            ESTADISTICAS GENERALES DE MIEMBROS DE PLATAFORMA
+            ESTADÍSTICAS GENERALES DE MIEMBROS DE PLATAFORMA
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@ $(function(){
           <div class="row">
             <div class="span12">
                 <table class="table  table-bordered table-condensed table-striped">
-                    <caption> Estadisticas</caption>
+                    <caption> Estadísticas</caption>
                 <thead>
                     <tr>
                          <td>Nombre</td>
@@ -42,7 +42,7 @@ $(function(){
                          <th scope="col"><i class="icon-comment"></i>Aportes</th>
                          <th scope="col"><i class="icon-comment"></i>Comentarios</th>
                          <th scope="col"><i class="icon-file"></i>Documentos</th>
-                         <th scope="col"><i class="icon-picture"></i>Imagenes</th>
+                         <th scope="col"><i class="icon-picture"></i>Imágenes</th>
                          <th scope="col"><i class="icon-facetime-video"></i>Videos</th>
                          <th scope="col"><i class="icon-volume-up"></i>Audios</th>
                     </tr>
