--- a/templates/privados/multimedia_audios.html
+++ b/templates/privados/multimedia_audios.html
@@ -54,7 +54,7 @@
 					<thead>
 						<tr>
 							<th width="610">Audio</th>
-							<th>descargar</th>
+							<th>Descargar</th>
 						</tr>
 					</thead>
 					<tbody>
