--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="span5">
                     <div class="encabezado-title">
-                        INICIAR SESION
+                        INICIAR SESIÓN
                     </div>
                 </div>
                 <div class="span7">
@@ -44,7 +44,7 @@
 				<div class="alert alert-success">
 					<p>Esta es una plataforma privada de CAFOD y contrapartes pertenecientes al programa medios de vida sostenible.</p>
 
-					<p>Si usted tiene algun problema para entrar en su cuenta o desea solicitar una nueva cuenta para entrar a la plataforma, le sugerimos escribir a los siguientes contactos</p>
+					<p>Si usted tiene algún problema para entrar a su cuenta o desea solicitar una nueva cuenta para entrar a la plataforma, le sugerimos escribir a los siguientes contactos:</p>
 
 					<p>Byron Corrales
 					<b>byron@simas.org.ni</b></p>
