--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -61,14 +61,14 @@ $(".alert").alert();
                         <div class="modal fade hide" id="myModal">
                           <div class="modal-header">
                             <a class="close" data-dismiss="modal">×</a>
-                            <h3>Esta Seguro?</h3>
+                            <h3>¿Está seguro?</h3>
                           </div>
                           <div class="modal-body">
-                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
+                            <p>La nota será borrada permanentemente y no podrá ser recuperada</p>
                           </div>
                           <div class="modal-footer">
                             <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
-                            <a href="/notas/borrar/{{nota.id}}" class="btn btn-danger">Borrar Permanentemente</a>
+                            <a href="/notas/borrar/{{nota.id}}" class="btn btn-danger">Borrar permanentemente</a>
                           </div>
                         </div>  
                 </div>
