--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -101,7 +101,7 @@ $(".alert").alert();
                     <div class="clean"></div>
                 </div>
                 {%endif%}
-                    {%if notas.adjuntos.count > 1%}
+                    {%if nota.adjuntos.all.count >= 1%}
                     <div class="sidebar-title">Documentos</div>
                     <div class="dividerline"></div>
                     <table class="table  table-bordered table-condensed doc-sidebar">
