--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -117,7 +117,7 @@ $(".alert").alert();
                     <div class="clean"></div>
                 </div>
                 {%endif%}
-                {%if notas.adjuntos.count > 1%}
+                {%if nota.adjuntos.count >= 1%}
                     <div class="sidebar-title">Documentos</div>
                     <div class="dividerline"></div>
                     <table class="table  table-bordered table-condensed doc-sidebar">
