--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,8 +1,5 @@
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
-  <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
-  <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
-  <script type="text/javascript" src="/files/js/less.min.js"></script>
+{% extends "baseadmin.html" %}
+
 {% block contenido %}
         <div id="titulo">
     
@@ -11,7 +8,7 @@
                     <table>
                         {{ form.as_table }}
                     </table> <br/>
-                    <a href="javascript:parent.jQuery.fancybox.close();" ><input class="btn btn-success"type="submit" value="Cambiar Contraseña"></a>
+                    <a href="" ><input class="btn btn-success"type="submit" value="Cambiar Contraseña"></a>
                 </form>
         
         </div>
