fix change password user

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,15 +1,39 @@
 {% extends "baseadmin.html" %}
 
 {% block contenido %}
-        <div id="titulo">
-    
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        CAMBIAR CONTRASEÑA DEL USUARIO
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
+
+<div class="row">
+  <div class="container">
+    <div class="row">
+        <div id="titulo">   
                 <form action="." method= "POST" enctype="multipart/form-data">
+                  <div class="span9">
                     {% csrf_token %}
-                    <table>
+                    <div class="well">
                         {{ form.as_table }}
-                    </table> <br/>
+                   <br/>
                     <a href="" ><input class="btn btn-success"type="submit" value="Cambiar Contraseña"></a>
+                   </div>
+                  </div>
                 </form>
         
         </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
