changing events style

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -239,6 +239,56 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	}
 }
 
+.eventoindex-nuevo{
+}
+
+.index-fechaevento-nuevo{
+	float:left;
+	width:50px;
+	background: #eeeeec;
+	height: 75px;
+	margin-bottom: 1px;
+	padding:10px;
+	color:#5e573d;
+	text-transform: uppercase;
+	font-size: 12px;
+
+}
+
+.index-nombreevento-nuevo{
+	float:left;
+	margin-left: 1px;
+	padding:10px;
+	width:129px;
+	height: 75px;
+	background: #fafaeb;
+	margin-bottom: 1px;
+	a{
+		color:#657a7a;
+		font-weight: bold;
+		font-size: 12px;
+		text-decoration:none;
+		&:hover{
+			color:#344040;
+		}
+	}
+}
+
+.bx-prev{
+	margin-right: 5px;
+	float:left ;
+}
+.bx-next{
+	float:right ;
+}
+.cuadronota{
+	width:210px;
+	height: 320px;
+	text-align: left;
+	margin-right: 23px;
+	float: left;
+}
+
 .index-descripevento{
 	color:#423724;
 	font-size:11px;
