--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -109,7 +109,7 @@ $(".alert").alert();
                         {% for adjuntos in nota.adjuntos.all%}
                         <tr>
                             <td>{{adjuntos.nombre_doc}}</td>
-                            <td><center><a href="{{adjuntos.adjunto}}" class=" btn btn-info btn-mini dropdown-toggle"><i class="icon-download-alt icon-white"></i>Descargar</a></center></td>
+                            <td><center><a href="/uploads/{{adjuntos.adjunto}}" class=" btn btn-info btn-mini dropdown-toggle"><i class="icon-download-alt icon-white"></i>Descargar</a></center></td>
                         </tr>
                         {% endfor %}
                       </tbody>
