--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,13 @@
                {% for nota in notas%}
                   <div class="cuadronota">
                    <div class="pais-index">{{nota.user.userprofile.contraparte.pais.nombre}}<img src="/files/img/{{nota.user.userprofile.contraparte.pais.codigo}}.png"></div>
+                   {% if nota.fotos.all %}
                    {%for thumb in nota.fotos.all|slice:"1"%} 
                          <img class="imagen-noticia-index" src="{{thumb.foto.url_220x160}}">
                    {%endfor%}
+                   {%else%}
+                        <img class="imagen-noticia-index" src="">
+                    {%endif%}
                    <div class="titulo-noticia-index">
                      {{nota.titulo}}
                    </div>
