--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                   <div class="cuadronota">
                    <div class="pais-index">{{nota.user.userprofile.contraparte.pais.nombre}}<img src="/files/img/{{nota.user.userprofile.contraparte.pais.codigo}}.png"></div>
                    {% if nota.fotos.all %}
-                   {%for thumb in nota.fotos.all|slice:"1"%} 
+                   {%for thumb in nota.fotos.all%} 
                          <img class="imagen-noticia-index" src="{{thumb.foto.url_220x160}}">
                    {%endfor%}
                    {%else%}
