--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                       {%if not thumb.foto.url_220x160 %}
                         <img class="imagen-noticia-index" src="">
                       {%else%} 
-                        <img class="imagen-noticia-index" src="{{thumb.foto.url_220x160}}">
+                        <img class="imagen-noticia-index" src="">
                       {%endif%}
                    {%endfor%}
                   
