--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -46,8 +46,8 @@
 
 					<p>Si usted tiene algún problema para entrar a su cuenta o desea solicitar una nueva cuenta para entrar a la plataforma, le sugerimos escribir a los siguientes contactos:</p>
 
-					<p>Byron Corrales
-					<b>byron@simas.org.ni</b></p>
+					<p>Carlos Rocha
+					<b>carlos@simas.org.ni</b></p>
 
 					<p>Martha Olivera
 					<b>martha@simas.org.ni</b></p>
