--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,16 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 	<title>{%block title%}CAFOD{%endblock%}</title>
-  {% load compress %}
-  {% compress css %}
+  {# {% load compress %} #}
+   {#{% compress css %}#}
     <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.min.css" >
     <link type="text/css" rel="stylesheet"  href="/files/css/cafod.css">
-  {% endcompress %}
+  {#{% endcompress %}#}
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  {% compress js %}
+   {#{% compress js %}#}
     <script type="text/javascript" src="/files/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/files/bootstrap/js/bootstrap-transition.js"></script>
-  {% endcompress %}
+   {#{% endcompress %}#}
   {%block extra_js%}{%endblock%}
 </head>
 <body>
